# bosgenesis-k8s-inspector-mcp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Installation.txt  README.md  pyproject.toml  requirements.txt
codex/: config.toml
config/: policy.yaml  settings.yaml
docs/: ARCHITECTURE.md  DESIGN.md  DESIGN_SPEC.md  HLD.md  LLD.md  MCP_TOOLS.md
docs/session/: session-context-20260523-100239.md
examples/: apply_configmap_dry_run.sh  delete_configmap_dry_run.sh  list_pods.sh  namespace_summary.sh
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
knowledge-base/: ARCHITECTURE.md  DESIGN.md  DESIGN_SPEC.md  HLD.md  LLD.md  MCP_TOOLS.md
knowledge-base/figures/: bosgenesis-k8s-inspector-system-architecture.drawio  bosgenesis-k8s-inspector-system-architecture.mmd
knowledge-base/session/: session-context-20260523-102636.md
memory/: compact-memory-20260523-102636.md
skills/: SKILL.md
src/bosgenesis_k8s_inspector_mcp/: __init__.py  audit.py  config.py  errors.py  k8s_client.py  main.py  models.py  operations.py  policy.py  server_fastapi.py  server_mcp.py  telemetry.py
tests/: test_api_auth.py  test_audit.py  test_config.py  test_http_mcp.py  test_k8s_client.py  test_operations.py  test_policy.py  test_resource_detail.py
tests/manual/: mcp_validation_prompts.md
