[project]
name = "bosgenesis-k8s-inspector-mcp"
version = "0.1.0"
description = "Namespace-scoped Kubernetes MCP/REST inspector and operator for BOS Genesis"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BOS Genesis" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "kubernetes>=31.0.0",
  "mcp>=1.2.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "python-json-logger>=2.0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.scripts]
bosgenesis-k8s-inspector-api = "bosgenesis_k8s_inspector_mcp.server_fastapi:run"
bosgenesis-k8s-inspector-mcp = "bosgenesis_k8s_inspector_mcp.server_mcp:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bosgenesis_k8s_inspector_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
